# gibberish

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gibberish.toml  justfile
.github/workflows/: rust-tests.yml
src/: agent.rs  config.rs  main.rs  repl.rs  session_capture.rs  terminal_session.rs
