[package]
name = "gibberish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
avt = "0"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
markdown = "1"
rig-core = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.34"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
pty-process = "0.5"
rustix = { version = "1", features = ["fs", "process"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
